test/typechecker.d/valid/fns3.surc
f(x: Integer): Char = 'a'

g(x: Integer): Char = x >> f
