test/typechecker.d/invalid/match1.surc
match1(dox: Integer): Integer = match dox
	'a' -> 3
	x -> 4
